--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "pm2 server.js"
   },
-  "engines" : { 
-    "npm" : "8.5.0",
-    "node" : "v16.14.2"
+  "engines": {
+    "npm": "8.5.0",
+    "node": "v16.14.2"
   },
   "keywords": [],
   "author": "",
