--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "pm2 server.js"
+    "start": "pm2 start server.js"
   },
   "engines": {
     "npm": "8.5.0",
